--- a/app.css
+++ b/app.css
@@ -1,3 +1,4 @@
 body {
-    background-color: blue;
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(108,9,121,1) 35%, rgba(0,212,255,1) 100%);
 }
